Prevent logout button container from collapsing

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -14,7 +14,7 @@ body {
 
 header {
     position: relative;
-    height: 4.5rem;
+    min-height: 72px;
 }
 
 svg {
